Fixed wrapping

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,12 +50,6 @@ p {
   text-wrap: pretty;
 }
 
-span {
-  white-space: pre;
-  /* text-wrap needs to be placed after white-space to overwrite wrapping behaviour */
-  text-wrap: pretty;
-}
-
 label.v-label {
   opacity: 1;
 }
